// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CatalogApplicationTabs cars 1`] = `
<div
  className="CatalogApplicationTabs"
>
  <AmpLink
    className="CatalogApplicationTabs__item"
    key="listing"
    url="link/listing/?from=top_menu_secondline&category=cars&tech_param_id="
  >
    Объявления
  </AmpLink>
  <AmpLink
    className="CatalogApplicationTabs__item CatalogApplicationTabs__item_state_active"
    key="catalog"
    url="link/catalog/?from=top_menu_secondline&category=cars"
  >
    Каталог
  </AmpLink>
  <AmpLink
    className="CatalogApplicationTabs__item"
    key="garage"
    url="link/garage/?from=top_menu_secondline"
  >
    Гараж
  </AmpLink>
  <AmpLink
    className="CatalogApplicationTabs__item"
    key="video"
    url="link/video/?from=top_menu_secondline&category=cars"
  >
    Видео
  </AmpLink>
  <AmpLink
    className="CatalogApplicationTabs__item"
    key="reviews"
    url="link/reviews-listing/?from=top_menu_secondline&parent_category=cars&category=cars"
  >
    Отзывы
  </AmpLink>
</div>
`;

exports[`CatalogApplicationTabs cars с кучей всего 1`] = `
<div
  className="CatalogApplicationTabs"
>
  <AmpLink
    className="CatalogApplicationTabs__item"
    key="listing"
    url="link/listing/?from=top_menu_secondline&category=cars&configuration_id=21397498&mark=mitsubishi&model=outlander&super_gen=21397304&tech_param_id=21397560"
  >
    Объявления
  </AmpLink>
  <AmpLink
    className="CatalogApplicationTabs__item CatalogApplicationTabs__item_state_active"
    key="catalog"
    url="link/catalog/?from=top_menu_secondline&category=cars&complectation_id=21397498_21397672_21397560&configuration_id=21397498&mark=mitsubishi&model=outlander&super_gen=21397304"
  >
    Каталог
  </AmpLink>
  <AmpLink
    className="CatalogApplicationTabs__item"
    key="garage"
    url="link/garage/?from=top_menu_secondline"
  >
    Гараж
  </AmpLink>
  <AmpLink
    className="CatalogApplicationTabs__item"
    key="video"
    url="link/video/?from=top_menu_secondline&category=cars&complectation_id=21397498_21397672_21397560&configuration_id=21397498&mark=mitsubishi&model=outlander&super_gen=21397304"
  >
    Видео
  </AmpLink>
  <AmpLink
    className="CatalogApplicationTabs__item"
    key="stats"
    url="link/stats/?from=top_menu_secondline&category=cars&complectation_id=21397498_21397672_21397560&configuration_id=21397498&mark=mitsubishi&model=outlander&super_gen=21397304"
  >
    Статистика цен
  </AmpLink>
  <AmpLink
    className="CatalogApplicationTabs__item"
    key="reviews"
    url="link/reviews-listing/?from=top_menu_secondline&parent_category=cars&category=cars&mark=mitsubishi&model=outlander&super_gen=21397304"
  >
    Отзывы
  </AmpLink>
</div>
`;

exports[`CatalogApplicationTabs cars с маркой 1`] = `
<div
  className="CatalogApplicationTabs"
>
  <AmpLink
    className="CatalogApplicationTabs__item"
    key="listing"
    url="link/listing/?from=top_menu_secondline&category=cars&mark=bmw&tech_param_id="
  >
    Объявления
  </AmpLink>
  <AmpLink
    className="CatalogApplicationTabs__item CatalogApplicationTabs__item_state_active"
    key="catalog"
    url="link/catalog/?from=top_menu_secondline&category=cars&mark=bmw"
  >
    Каталог
  </AmpLink>
  <AmpLink
    className="CatalogApplicationTabs__item"
    key="garage"
    url="link/garage/?from=top_menu_secondline"
  >
    Гараж
  </AmpLink>
  <AmpLink
    className="CatalogApplicationTabs__item"
    key="video"
    url="link/video/?from=top_menu_secondline&category=cars&mark=bmw"
  >
    Видео
  </AmpLink>
  <AmpLink
    className="CatalogApplicationTabs__item"
    key="stats"
    url="link/stats/?from=top_menu_secondline&category=cars&mark=bmw"
  >
    Статистика цен
  </AmpLink>
  <AmpLink
    className="CatalogApplicationTabs__item"
    key="reviews"
    url="link/reviews-listing/?from=top_menu_secondline&parent_category=cars&category=cars&mark=bmw"
  >
    Отзывы
  </AmpLink>
</div>
`;
